--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<h3>نمونه‌کارها:</h3>
+<div class="gallery">
+  <img src="1000001859.jpg" alt="نمونه کار فنی برق صنعتی ۱">
+  <img src="1000001861.jpg" alt="نمونه کار فنی برق صنعتی ۲">
+</div>
 
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
