--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <h3>نمونه‌کارها:</h3>
     <div class="gallery">
-      <img src="1000001859.jpg." alt="نمونه کار فنی برق صنعتی ۱">
+      <img src="1000001859.jpg" alt="نمونه کار فنی برق صنعتی ۱">
       <img src="1000001861.jpg" alt="نمونه کار فنی برق صنعتی ۲">
     </div>
 
